# book-pipeline

./: .gitignore  mypy.ini  pyproject.toml  readme.md
.github/: copilot-instructions.md
apple/: book_config.json
gemini_book_generator/: book_graph.py  book_pipeline.py  chapter_prompt.txt  common_logger.py  content_generation.py  epub_generator.py  gemini_llm.py  helpers.py  main.py  pipeline.py  prompt_generation.py  toc_generation.py  toc_prompt.txt
gemini_book_generator/prompts/: chapter_prompt.txt  toc_prompt.txt
gemini_book_generator/tests/: test_epub_e2e.py  test_epub_generator.py
genbook/: __main__.py  book_graph.py  content_generation.py  epub_generator.py  gemini_config.json  gemini_llm.py  graph_state.py  main.py  project_manager.py  prompt_generation.py  toc_generation.py
genbook/tests/: test_epub_e2e.py  test_epub_generator.py  test_project_manager.py
generated-prompts/: book_index.json
stubs/: book_pipeline.pyi  epub_generator.pyi  gemini_llm.pyi  helpers.pyi
stubs/ebooklib/: __init__.pyi  epub.pyi  utils.pyi
stubs/ebooklib/plugins/: base.pyi  booktype.pyi  sourcecode.pyi  standard.pyi  tidyhtml.pyi
stubs/google/genai/: _api_client.pyi  _common.pyi  _replay_api_client.pyi  _transformers.pyi  chats.pyi  errors.pyi  live.pyi  models.pyi  types.pyi
tools/: smoke_run.py
